# docker-python

./: .build.env  .bumpversion.cfg  .dockerignore  .env  .gitignore  CHANGELOG.md  Dockerfile  README.md  Taskfile.yml  cliff.toml  poetry.toml  pyproject.toml
.github/: .build.env  matrix.yml
.github/workflows/: build-image.yml  build-matrix.yml  build_image.yml
.gitlab/: .build.env.yml  matrix.yml
.gitlab/workflows/: .gitlab-ci.yml  build-image.yml
scripts/: test-image.sh
taskfiles/: poetry.yml  pre-commit.yml  uv.yml
