[project]
name = "docker-python"
version = "2025.05.18.0"
description = ""
readme = "README.md"
authors = ["Alexander Chaykovskiy <alexchay@gmail.com>"]
license = "MIT"
repository = "https://github.com/alexchay/docker-python"
homepage = "https://github.com/alexchay/docker-python"
package-mode = false
requires-python = ">=3.10"
dependencies = [
]

[dependency-groups]
dev = [
    "ruff >=0.7.4, <1.0.0"
]