[project]
name = "docker-python"
version = "2025.05.22.0"
description = ""
readme = "README.md"
authors = ["Alexander Chaykovskiy <alexchay@gmail.com>"]
license = "MIT"
repository = "https://github.com/alexchay/docker-python"
homepage = "https://github.com/alexchay/docker-python"
package-mode = false
requires-python = ">=3.10"
dependencies = [
]

[dependency-groups]
dev = [
    "ruff >=0.7.4, <1.0.0"
]

[tool.bumpversion]
current_version = "2025.05.22.0"
parse = """(?x)                      # Verbose mode
    (?P<release>                     # The release part
        (?:[1-9][0-9]{3})\\.         # "{YYYY}".
        (?:1[0-2]|0[1-9])\\.         # "{0M}".
        (?:3[0-1]|[1-2][0-9]|0[1-9]) # "{0D}"
    )
    (?:\\.(?P<patch>\\d+))?          # .patch, optional
"""
serialize = [
    "{release}.{patch}"
]

search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
tag_name = "{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
sign_tags = false
allow_dirty = false
commit = true
message = "bump: up2date {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[tool.bumpversion.parts.release]
calver_format = "{YYYY}.{0M}.{0D}"